update docs for better organization
