# src/main/java/com/mytiki/l0_auth/features/latest/api_key/ApiKeyController.java
@@ -21,7 +21,6 @@ import org.springframework.web.bind.annotation.*;
 import java.security.Principal;
 import java.util.List;
 
-@Tag(name = "ACCOUNT")
 @RestController
 @RequestMapping(value = ApiConstants.API_LATEST_ROUTE)
 public class ApiKeyController {
@@ -34,17 +33,18 @@ public class ApiKeyController {
         this.service = service;
     }
 
+    @Tag(name = "KEYS")
     @Operation(operationId = Constants.PROJECT_DASH_PATH +  "-api-keys-get",
-            summary = "Get Keys",
+            summary = "Get App Keys",
             description = "Get the API Keys for the given App (appId)",
             security = @SecurityRequirement(name = "jwt"))
     @RequestMapping(method = RequestMethod.GET, path = PATH_APP_KEY)
     public List<ApiKeyAO> getAppKeys(Principal principal, @PathVariable String appId) {
         return service.getByAppId(principal.getName(), appId);
     }
-
+    @Tag(name = "KEYS")
     @Operation(operationId = Constants.PROJECT_DASH_PATH +  "-api-keys-create",
-            summary = "Create Key",
+            summary = "Create App Key",
             description = "Create a new API Key for the given App (appId)",
             security = @SecurityRequirement(name = "jwt"))
     @RequestMapping(method = RequestMethod.POST, path = PATH_APP_KEY)
@@ -54,6 +54,7 @@ public class ApiKeyController {
             @RequestParam(required = false) boolean isPublic) {
         return service.create(principal.getName(), appId, isPublic);
     }
+    @Tag(name = "KEYS")
     @Operation(operationId = Constants.PROJECT_DASH_PATH +  "-api-keys-delete",
             summary = "Delete Key",
             description = "Revoke (permanent!) an API Key",
@@ -63,6 +64,7 @@ public class ApiKeyController {
         service.revoke(principal.getName(), keyId);
     }
 
+    @Tag(name = "AUTH")
     @RequestMapping(
             method = RequestMethod.POST,
             path = Constants.OAUTH_TOKEN_PATH,
